--- a/index.html
+++ b/index.html
@@ -462,9 +462,7 @@
         <div class="row">
           <div class="col col-md-6">© 2020 bike. All rights reserved</div>
           <div class="col col-md-6">
-            <div class="text-end">
-              <img class="img-fluid" src="./icons/Vector.svg" alt="" />
-            </div>
+            <div class="text-end">hello</div>
           </div>
         </div>
       </div>
